overflow quick fix

--- a/themes/intangibletheme23/static/scss/style.scss
+++ b/themes/intangibletheme23/static/scss/style.scss
@@ -46,7 +46,7 @@ body {
         margin-left: auto;
         margin-right: auto;
         max-width: 800px;
-
+        overflow: hidden;
         display: block;
         height: 100%;
         margin-bottom: auto;
@@ -174,7 +174,7 @@ footer {
 
 .home-main {
     z-index: -1;
-    overflow-y: hidden;
+    overflow: hidden;
     // position: absolute;
     top: 0px;
     left: 0px;
